Создано с помощью Colaboratory

--- a/chat_database.ipynb
+++ b/chat_database.ipynb
@@ -27,13 +27,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 60,
+      "execution_count": 105,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "bJgD6ppW07Uk",
-        "outputId": "53f9f041-dc21-4bf4-c171-c9532665bcee"
+        "outputId": "ef3f5a20-d7c2-4f5f-952d-aa175dae77a3"
       },
       "outputs": [
         {
@@ -41,35 +41,37 @@
           "name": "stdout",
           "text": [
             "users\n",
-            "+------+--------+-------+--------+\n",
-            "|   id |  name  |   age |  city  |\n",
-            "+======+========+=======+========+\n",
-            "|    2 |  Ann   |    22 | Paris  |\n",
-            "+------+--------+-------+--------+\n",
+            "+------+---------+------------+------------+-------+----------+\n",
+            "|   id |  login  |  password  |  username  |   age |   city   |\n",
+            "+======+=========+============+============+=======+==========+\n",
+            "|    1 |         |            |    Alex    |    23 | New York |\n",
+            "+------+---------+------------+------------+-------+----------+\n",
+            "|    2 |         |            |    Ann     |    22 |  Paris   |\n",
+            "+------+---------+------------+------------+-------+----------+\n",
             "\n",
             "\n",
             "chats\n",
-            "+------+--------------+--------------+---------------+----------------------------+\n",
-            "|   id |     name     |  created_by  |  description  |         created_at         |\n",
-            "+======+==============+==============+===============+============================+\n",
-            "|    1 |   new_chat   |     Alex     |  decription   | 2023-11-17 09:15:16.258711 |\n",
-            "+------+--------------+--------------+---------------+----------------------------+\n",
-            "|    2 | another_chat |     Ann      |  decription   | 2023-11-17 09:15:16.267521 |\n",
-            "+------+--------------+--------------+---------------+----------------------------+\n",
+            "+------+--------------+--------------+-------------------------+---------------------+\n",
+            "|   id |   chatname   |  created_by  |       description       |     created_at      |\n",
+            "+======+==============+==============+=========================+=====================+\n",
+            "|    1 |   new_chat   |     Alex     | my new chat is the best | 2023-11-17 10:14:41 |\n",
+            "+------+--------------+--------------+-------------------------+---------------------+\n",
+            "|    2 | another_chat |     Ann      |       hobby chat        | 2023-11-17 10:14:41 |\n",
+            "+------+--------------+--------------+-------------------------+---------------------+\n",
             "\n",
             "\n",
             "messages\n",
-            "+------+--------------+------------+-----------+----------------------------+\n",
-            "|   id |   chatname   |  username  |  message  |         created_at         |\n",
-            "+======+==============+============+===========+============================+\n",
-            "|    1 |   new_chat   |    Alex    |    hi     | 2023-11-17 09:15:16.275738 |\n",
-            "+------+--------------+------------+-----------+----------------------------+\n",
-            "|    2 | another_chat |    Alex    |    hi     | 2023-11-17 09:15:16.284147 |\n",
-            "+------+--------------+------------+-----------+----------------------------+\n",
-            "|    3 |   new_chat   |    Ann     |    hi     | 2023-11-17 09:15:16.292277 |\n",
-            "+------+--------------+------------+-----------+----------------------------+\n",
-            "|    4 | another_chat |    Ann     |    hi     | 2023-11-17 09:15:16.300039 |\n",
-            "+------+--------------+------------+-----------+----------------------------+\n",
+            "+------+--------------+------------+-----------+---------------------+\n",
+            "|   id |   chatname   |  username  |  message  |     created_at      |\n",
+            "+======+==============+============+===========+=====================+\n",
+            "|    1 |   new_chat   |    Alex    |    hi     | 2023-11-17 10:14:41 |\n",
+            "+------+--------------+------------+-----------+---------------------+\n",
+            "|    2 | another_chat |    Alex    |    hi     | 2023-11-17 10:14:41 |\n",
+            "+------+--------------+------------+-----------+---------------------+\n",
+            "|    3 |   new_chat   |    Ann     |    hi     | 2023-11-17 10:14:41 |\n",
+            "+------+--------------+------------+-----------+---------------------+\n",
+            "|    4 | another_chat |    Ann     |    hi     | 2023-11-17 10:14:41 |\n",
+            "+------+--------------+------------+-----------+---------------------+\n",
             "\n",
             "\n"
           ]
@@ -115,7 +117,9 @@
         "            \"\"\"\n",
         "                CREATE TABLE IF NOT EXISTS users (\n",
         "                    id INTEGER PRIMARY KEY AUTOINCREMENT,\n",
-        "                    name TEXT UNIQUE,\n",
+        "                    login TEXT UNIQUE,\n",
+        "                    password TEXT,\n",
+        "                    username TEXT,\n",
         "                    age INTEGER,\n",
         "                    city TEXT\n",
         "                );\n",
@@ -125,10 +129,18 @@
         "            \"\"\"\n",
         "                CREATE TABLE IF NOT EXISTS chats (\n",
         "                    id INTEGER PRIMARY KEY AUTOINCREMENT,\n",
-        "                    name TEXT UNIQUE,\n",
+        "                    chatname TEXT,\n",
         "                    created_by TEXT,\n",
         "                    description TEXT,\n",
         "                    created_at DATETIME\n",
+        "                );\n",
+        "            \"\"\"\n",
+        "        )\n",
+        "        cursor.execute(\n",
+        "            \"\"\"\n",
+        "                CREATE TABLE IF NOT EXISTS chat_users (\n",
+        "                    username TEXT,\n",
+        "                    chatname TEXT\n",
         "                );\n",
         "            \"\"\"\n",
         "        )\n",
@@ -151,7 +163,7 @@
         "    with sqlite3.connect(db) as connection:\n",
         "      cursor = connection.cursor()\n",
         "      query = \"\"\"\n",
-        "                  INSERT INTO users (name, age, city)\n",
+        "                  INSERT INTO users (username, age, city)\n",
         "                  VALUES (?, ?, ?)\n",
         "              \"\"\"\n",
         "      cursor.execute(query, (username, age, city))\n",
@@ -162,10 +174,10 @@
         "    with sqlite3.connect(db) as connection:\n",
         "      cursor = connection.cursor()\n",
         "      query = \"\"\"\n",
-        "                  INSERT INTO chats (name, description, created_at, created_by)\n",
-        "                  VALUES (?, ?, ?, ?)\n",
+        "                  INSERT INTO chats (chatname, description, created_at, created_by)\n",
+        "                  VALUES (?, ?, CURRENT_TIMESTAMP, ?)\n",
         "              \"\"\"\n",
-        "      cursor.execute(query, (chatname, description, datetime.datetime.now(), created_by))\n",
+        "      cursor.execute(query, (chatname, description, created_by))\n",
         "      connection.commit()\n",
         "\n",
         "\n",
@@ -174,9 +186,9 @@
         "        cursor = connection.cursor()\n",
         "        query = \"\"\"\n",
         "                    INSERT INTO messages (chatname, username, message, created_at)\n",
-        "                    VALUES (?, ?, ?, ?)\n",
+        "                    VALUES (?, ?, ?, CURRENT_TIMESTAMP)\n",
         "                \"\"\"\n",
-        "        cursor.execute(query, (chatname, username, message, datetime.datetime.now()))\n",
+        "        cursor.execute(query, (chatname, username, message))\n",
         "        connection.commit()\n",
         "\n",
         "\n",
@@ -185,56 +197,99 @@
         "        cursor = connection.cursor()\n",
         "        query = \"\"\"\n",
         "                    DELETE FROM users\n",
-        "                    WHERE name = ?\n",
+        "                    WHERE username = ?\n",
         "                \"\"\"\n",
         "        cursor.execute(query, (username,))\n",
         "        connection.commit()\n",
         "\n",
         "\n",
-        "\n",
-        "def delete_chat(chatname):\n",
+        "def delete_chat(username, chatname):\n",
         "    with sqlite3.connect(db) as connection:\n",
         "        cursor = connection.cursor()\n",
         "        query = \"\"\"\n",
-        "                    DELETE FROM chats\n",
-        "                    WHERE name = ?\n",
+        "                    DELETE FROM chat_users\n",
+        "                    WHERE username = ? AND chatname = ?\n",
         "                \"\"\"\n",
-        "        cursor.execute(query, (chatname,))\n",
+        "        cursor.execute(query, (username, chatname))\n",
         "        connection.commit()\n",
         "\n",
         "\n",
-        "def delete_message(username, chatname, message_id):\n",
+        "def delete_message(username, chatname, id):\n",
         "    with sqlite3.connect(db) as connection:\n",
         "        cursor = connection.cursor()\n",
         "        query = \"\"\"\n",
         "                    DELETE FROM messages\n",
-        "                    WHERE chatname = ? AND username = ? AND message_id = ?\n",
+        "                    WHERE chatname = ? AND username = ? AND id = ?\n",
         "                \"\"\"\n",
-        "        cursor.execute(query, (chatname, username, message_id))\n",
+        "        cursor.execute(query, (chatname, username, id))\n",
         "        connection.commit()\n",
+        "\n",
+        "\n",
+        "def get_all_users_by_city(city):\n",
+        "    with sqlite3.connect(db) as connection:\n",
+        "        cursor = connection.cursor()\n",
+        "        query = \"\"\"\n",
+        "                    SELECT username FROM users WHERE city = ?\n",
+        "                \"\"\"\n",
+        "        cursor.execute(query, (city,))\n",
+        "        return [row for row in cursor.fetchall()]\n",
+        "\n",
+        "\n",
+        "def get_all_chat_names(username):\n",
+        "    with sqlite3.connect(db) as connection:\n",
+        "        cursor = connection.cursor()\n",
+        "        query = \"\"\"\n",
+        "                    SELECT chatname FROM chats WHERE created_by = ?\n",
+        "                \"\"\"\n",
+        "        cursor.execute(query, (username,))\n",
+        "        return [row for row in cursor.fetchall()]\n",
+        "\n",
+        "\n",
+        "def get_all_messages_of_chat(chatname):\n",
+        "    with sqlite3.connect(db) as connection:\n",
+        "        cursor = connection.cursor()\n",
+        "        query = \"\"\"\n",
+        "                    SELECT username, message FROM messages WHERE chatname = ?\n",
+        "                \"\"\"\n",
+        "        cursor.execute(query, (chatname,))\n",
+        "        return [row for row in cursor.fetchall()]\n",
         "\n",
         "\n",
         "create_db()\n",
         "\n",
         "# create_user(\"Alex\", 23, \"New York\")\n",
         "# create_user(\"Ann\", 22, \"Paris\")\n",
-        "# create_chat(\"new_chat\", \"decription\", \"Alex\")\n",
-        "# create_chat(\"another_chat\", \"decription\", \"Ann\")\n",
+        "# create_chat(\"new_chat\", \"my new chat is the best\", \"Alex\")\n",
+        "# create_chat(\"another_chat\", \"hobby chat\", \"Ann\")\n",
         "# send_message(\"Alex\", \"new_chat\", \"hi\")\n",
         "# send_message(\"Alex\", \"another_chat\", \"hi\")\n",
         "# send_message(\"Ann\", \"new_chat\", \"hi\")\n",
         "# send_message(\"Ann\", \"another_chat\", \"hi\")\n",
         "\n",
-        "\n",
-        "delete_user(\"Alex\")\n",
-        "# delete_chat(\"new_chat\")\n",
-        "# delete_user_from_chat(\"Alex\", \"new_chat\")"
+        "# get_all_users_by_city(\"New York\")\n",
+        "# get_all_chat_names(\"Alex\")\n",
+        "get_all_messages_of_chat(\"new_chat\")"
       ],
       "metadata": {
-        "id": "Hqd48Xvo09YO"
+        "id": "Hqd48Xvo09YO",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "001c042e-24bf-433a-d1f9-f7ba4bdd8041"
       },
-      "execution_count": 59,
-      "outputs": []
+      "execution_count": 108,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[('Alex', 'hi'), ('Ann', 'hi')]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 108
+        }
+      ]
     }
   ]
 }
