Создано с помощью Colaboratory

--- a/chat_database.ipynb
+++ b/chat_database.ipynb
@@ -27,13 +27,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 105,
+      "execution_count": 115,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "bJgD6ppW07Uk",
-        "outputId": "ef3f5a20-d7c2-4f5f-952d-aa175dae77a3"
+        "outputId": "15b8e25b-d4e8-4291-c625-e9212fc48bdf"
       },
       "outputs": [
         {
@@ -54,23 +54,37 @@
             "+------+--------------+--------------+-------------------------+---------------------+\n",
             "|   id |   chatname   |  created_by  |       description       |     created_at      |\n",
             "+======+==============+==============+=========================+=====================+\n",
-            "|    1 |   new_chat   |     Alex     | my new chat is the best | 2023-11-17 10:14:41 |\n",
+            "|    1 |   new_chat   |     Alex     | my new chat is the best | 2023-11-17 10:23:28 |\n",
             "+------+--------------+--------------+-------------------------+---------------------+\n",
-            "|    2 | another_chat |     Ann      |       hobby chat        | 2023-11-17 10:14:41 |\n",
+            "|    2 | another_chat |     Ann      |       hobby chat        | 2023-11-17 10:23:28 |\n",
             "+------+--------------+--------------+-------------------------+---------------------+\n",
+            "\n",
+            "\n",
+            "chat_users\n",
+            "+------------+--------------+\n",
+            "|  username  |   chatname   |\n",
+            "+============+==============+\n",
+            "|    Alex    |   new_chat   |\n",
+            "+------------+--------------+\n",
+            "|    Alex    | another_chat |\n",
+            "+------------+--------------+\n",
+            "|    Ann     |   new_chat   |\n",
+            "+------------+--------------+\n",
+            "|    Ann     | another_chat |\n",
+            "+------------+--------------+\n",
             "\n",
             "\n",
             "messages\n",
             "+------+--------------+------------+-----------+---------------------+\n",
             "|   id |   chatname   |  username  |  message  |     created_at      |\n",
             "+======+==============+============+===========+=====================+\n",
-            "|    1 |   new_chat   |    Alex    |    hi     | 2023-11-17 10:14:41 |\n",
+            "|    1 |   new_chat   |    Alex    |    hi     | 2023-11-17 10:23:28 |\n",
             "+------+--------------+------------+-----------+---------------------+\n",
-            "|    2 | another_chat |    Alex    |    hi     | 2023-11-17 10:14:41 |\n",
+            "|    2 | another_chat |    Alex    |    hi     | 2023-11-17 10:23:28 |\n",
             "+------+--------------+------------+-----------+---------------------+\n",
-            "|    3 |   new_chat   |    Ann     |    hi     | 2023-11-17 10:14:41 |\n",
+            "|    3 |   new_chat   |    Ann     |    hi     | 2023-11-17 10:23:28 |\n",
             "+------+--------------+------------+-----------+---------------------+\n",
-            "|    4 | another_chat |    Ann     |    hi     | 2023-11-17 10:14:41 |\n",
+            "|    4 | another_chat |    Ann     |    hi     | 2023-11-17 10:23:28 |\n",
             "+------+--------------+------------+-----------+---------------------+\n",
             "\n",
             "\n"
@@ -85,7 +99,7 @@
         "db = 'chat.db'\n",
         "\n",
         "def show_tables():\n",
-        "  tables = ['users', 'chats', 'messages']\n",
+        "  tables = ['users', 'chats', 'chat_users', 'messages']\n",
         "  def show(tablename):\n",
         "    try:\n",
         "      with sqlite3.connect(db) as connection:\n",
@@ -181,6 +195,17 @@
         "      connection.commit()\n",
         "\n",
         "\n",
+        "def add_user_to_chat(username, chatname):\n",
+        "    with sqlite3.connect(db) as connection:\n",
+        "        cursor = connection.cursor()\n",
+        "        query = \"\"\"\n",
+        "                    INSERT INTO chat_users (username, chatname)\n",
+        "                    VALUES (?, ?)\n",
+        "                \"\"\"\n",
+        "        cursor.execute(query, (username, chatname))\n",
+        "        connection.commit()\n",
+        "\n",
+        "\n",
         "def send_message(username, chatname, message):\n",
         "    with sqlite3.connect(db) as connection:\n",
         "        cursor = connection.cursor()\n",
@@ -257,14 +282,18 @@
         "\n",
         "create_db()\n",
         "\n",
-        "# create_user(\"Alex\", 23, \"New York\")\n",
-        "# create_user(\"Ann\", 22, \"Paris\")\n",
-        "# create_chat(\"new_chat\", \"my new chat is the best\", \"Alex\")\n",
-        "# create_chat(\"another_chat\", \"hobby chat\", \"Ann\")\n",
-        "# send_message(\"Alex\", \"new_chat\", \"hi\")\n",
-        "# send_message(\"Alex\", \"another_chat\", \"hi\")\n",
-        "# send_message(\"Ann\", \"new_chat\", \"hi\")\n",
-        "# send_message(\"Ann\", \"another_chat\", \"hi\")\n",
+        "create_user(\"Alex\", 23, \"New York\")\n",
+        "create_user(\"Ann\", 22, \"Paris\")\n",
+        "create_chat(\"new_chat\", \"my new chat is the best\", \"Alex\")\n",
+        "create_chat(\"another_chat\", \"hobby chat\", \"Ann\")\n",
+        "add_user_to_chat(\"Alex\", \"new_chat\")\n",
+        "add_user_to_chat(\"Alex\", \"another_chat\")\n",
+        "add_user_to_chat(\"Ann\", \"new_chat\")\n",
+        "add_user_to_chat(\"Ann\", \"another_chat\")\n",
+        "send_message(\"Alex\", \"new_chat\", \"hi\")\n",
+        "send_message(\"Alex\", \"another_chat\", \"hi\")\n",
+        "send_message(\"Ann\", \"new_chat\", \"hi\")\n",
+        "send_message(\"Ann\", \"another_chat\", \"hi\")\n",
         "\n",
         "# get_all_users_by_city(\"New York\")\n",
         "# get_all_chat_names(\"Alex\")\n",
@@ -275,9 +304,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "001c042e-24bf-433a-d1f9-f7ba4bdd8041"
+        "outputId": "6a618763-994f-493d-96ea-7ae6b172ca05"
       },
-      "execution_count": 108,
+      "execution_count": 114,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -287,7 +316,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 108
+          "execution_count": 114
         }
       ]
     }
