Создано с помощью Colaboratory

--- a/join.ipynb
+++ b/join.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPShE6/ZWw+TlX6vHwJME8w",
+      "authorship_tag": "ABX9TyP5DcG969YUPAZ/rIab3Nnq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,6 +28,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 2,
+      "metadata": {
+        "id": "X-PgufXrWZqC"
+      },
+      "outputs": [],
       "source": [
         "import time\n",
         "\n",
@@ -38,34 +43,10 @@
         "        print(time.perf_counter_ns() - start_time)\n",
         "        return res\n",
         "    return wrapped"
-      ],
-      "metadata": {
-        "id": "UiN-tJNX11Fc"
-      },
-      "execution_count": 2,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "CNFNfFOdrtTo",
-        "outputId": "230a5ddc-6288-480e-dc9a-2aff1ebd6eff"
-      },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Empty\n",
-            "Empty\n",
-            "Empty\n"
-          ]
-        }
-      ],
       "source": [
         "import sqlite3\n",
         "from tabulate import tabulate\n",
@@ -94,6 +75,68 @@
         "    show(table)\n",
         "\n",
         "show_tables()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "S25K-QO1Wd7R",
+        "outputId": "d875a672-d449-4e3a-ab2e-43e5019ab062"
+      },
+      "execution_count": 79,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "users\n",
+            "+------+----------+------------+------------+-------+----------+\n",
+            "|   id |  login   |   password |  username  |   age |   city   |\n",
+            "+======+==========+============+============+=======+==========+\n",
+            "|    1 | shsfeawd |     123123 |    Alex    |    23 | New York |\n",
+            "+------+----------+------------+------------+-------+----------+\n",
+            "|    2 | awawddwq |     231231 |    Ann     |    22 |  Paris   |\n",
+            "+------+----------+------------+------------+-------+----------+\n",
+            "\n",
+            "\n",
+            "chats\n",
+            "+------+------------+---------------+---------------------+\n",
+            "|   id |  chatname  |  description  |     created_at      |\n",
+            "+======+============+===============+=====================+\n",
+            "|    1 |   chat1    |  study_chat   | 2023-11-22 19:07:51 |\n",
+            "+------+------------+---------------+---------------------+\n",
+            "|    2 |   chat2    |  hobby_chat   | 2023-11-22 19:07:51 |\n",
+            "+------+------------+---------------+---------------------+\n",
+            "|    3 |   chat3    |    my_chat    | 2023-11-22 19:07:51 |\n",
+            "+------+------------+---------------+---------------------+\n",
+            "|    4 |   chat4    |   new_chat    | 2023-11-22 19:07:51 |\n",
+            "+------+------------+---------------+---------------------+\n",
+            "\n",
+            "\n",
+            "chat_users\n",
+            "+-----------+-----------+\n",
+            "|   user_id |   chat_id |\n",
+            "+===========+===========+\n",
+            "|         1 |         1 |\n",
+            "+-----------+-----------+\n",
+            "|         1 |         2 |\n",
+            "+-----------+-----------+\n",
+            "|         1 |         3 |\n",
+            "+-----------+-----------+\n",
+            "|         1 |         4 |\n",
+            "+-----------+-----------+\n",
+            "|         2 |         1 |\n",
+            "+-----------+-----------+\n",
+            "|         2 |         2 |\n",
+            "+-----------+-----------+\n",
+            "|         2 |         3 |\n",
+            "+-----------+-----------+\n",
+            "|         2 |         4 |\n",
+            "+-----------+-----------+\n",
+            "\n",
+            "\n"
+          ]
+        }
       ]
     },
     {
@@ -132,17 +175,8 @@
         "        )\n",
         "        connection.commit()\n",
         "\n",
-        "create_db1()\n"
-      ],
-      "metadata": {
-        "id": "mfqeiSnwttyK"
-      },
-      "execution_count": 4,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
+        "create_db1()\n",
+        "\n",
         "def create_db2():\n",
         "    with sqlite3.connect('chat2.db') as connection:\n",
         "        cursor = connection.cursor()\n",
@@ -183,9 +217,9 @@
         "create_db2()"
       ],
       "metadata": {
-        "id": "OhQXUm5Uu7fk"
+        "id": "Gjd2oYdaWjpS"
       },
-      "execution_count": 5,
+      "execution_count": 82,
       "outputs": []
     },
     {
@@ -250,37 +284,49 @@
         "    with sqlite3.connect('chat2.db') as connection:\n",
         "        cursor = connection.cursor()\n",
         "        query = \"\"\"\n",
-        "            INSERT INTO chat_users (user_id, chat_id)\n",
-        "            SELECT u.id, c.id\n",
-        "            FROM users u\n",
-        "            JOIN chats c ON u.login = ? AND c.chatname = ?;\n",
-        "        \"\"\"\n",
+        "                    INSERT INTO chat_users (user_id, chat_id)\n",
+        "                    SELECT u.id, c.id\n",
+        "                    FROM users u\n",
+        "                    JOIN chats c ON u.login = ? AND c.chatname = ?;\n",
+        "                \"\"\"\n",
         "        cursor.execute(query, (login, chatname))\n",
         "        connection.commit()\n",
         "\n",
         "@time_of_function\n",
         "def f1():\n",
-        "  for i in range(20):\n",
+        "  for i in range(1):\n",
         "    insert_user1(\"shsfeawd\", \"123123\", \"Alex\", 23, \"New York\")\n",
         "    insert_user1(\"awawddwq\", \"231231\", \"Ann\", 22, \"Paris\")\n",
-        "    insert_chat1(\"new_chat\", \"study_chat\")\n",
-        "    insert_chat1(\"another_chat\", \"hobby chat\")\n",
-        "    insert_chat_user1(\"shsfeawd\", \"new_chat\")\n",
-        "    insert_chat_user1(\"shsfeawd\", \"another_chat\")\n",
-        "    insert_chat_user1(\"awawddwq\", \"new_chat\")\n",
-        "    insert_chat_user1(\"awawddwq\", \"another_chat\")\n",
+        "    insert_chat1(\"chat1\", \"study_chat\")\n",
+        "    insert_chat1(\"chat2\", \"hobby_chat\")\n",
+        "    insert_chat1(\"chat3\", \"my_chat\")\n",
+        "    insert_chat1(\"chat4\", \"new_chat\")\n",
+        "    insert_chat_user1(\"shsfeawd\", \"chat1\")\n",
+        "    insert_chat_user1(\"shsfeawd\", \"chat2\")\n",
+        "    insert_chat_user1(\"shsfeawd\", \"chat3\")\n",
+        "    insert_chat_user1(\"shsfeawd\", \"chat4\")\n",
+        "    insert_chat_user1(\"awawddwq\", \"chat1\")\n",
+        "    insert_chat_user1(\"awawddwq\", \"chat2\")\n",
+        "    insert_chat_user1(\"awawddwq\", \"chat3\")\n",
+        "    insert_chat_user1(\"awawddwq\", \"chat4\")\n",
         "\n",
         "@time_of_function\n",
         "def f2():\n",
-        "  for i in range(20):\n",
+        "  for i in range(1):\n",
         "    insert_user2(\"shsfeawd\", \"123123\", \"Alex\", 23, \"New York\")\n",
         "    insert_user2(\"awawddwq\", \"231231\", \"Ann\", 22, \"Paris\")\n",
-        "    insert_chat2(\"new_chat\", \"study_chat\")\n",
-        "    insert_chat2(\"another_chat\", \"hobby chat\")\n",
-        "    insert_chat_user2(\"shsfeawd\", \"new_chat\")\n",
-        "    insert_chat_user2(\"shsfeawd\", \"another_chat\")\n",
-        "    insert_chat_user2(\"awawddwq\", \"new_chat\")\n",
-        "    insert_chat_user2(\"awawddwq\", \"another_chat\")\n",
+        "    insert_chat2(\"chat1\", \"study_chat\")\n",
+        "    insert_chat2(\"chat2\", \"hobby_chat\")\n",
+        "    insert_chat2(\"chat3\", \"my_chat\")\n",
+        "    insert_chat2(\"chat4\", \"new_chat\")\n",
+        "    insert_chat_user2(\"shsfeawd\", \"chat1\")\n",
+        "    insert_chat_user2(\"shsfeawd\", \"chat2\")\n",
+        "    insert_chat_user2(\"shsfeawd\", \"chat3\")\n",
+        "    insert_chat_user2(\"shsfeawd\", \"chat4\")\n",
+        "    insert_chat_user2(\"awawddwq\", \"chat1\")\n",
+        "    insert_chat_user2(\"awawddwq\", \"chat2\")\n",
+        "    insert_chat_user2(\"awawddwq\", \"chat3\")\n",
+        "    insert_chat_user2(\"awawddwq\", \"chat4\")\n",
         "\n",
         "f1()\n",
         "f2()"
@@ -289,17 +335,65 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "sXRCP-HcxJ5J",
-        "outputId": "21efeeda-0a38-4b0e-9cac-50d6abd88d48"
+        "id": "XR_Wq1xrWsl8",
+        "outputId": "f46d281e-873d-4f6e-a929-fe55930bbec8"
       },
-      "execution_count": 13,
+      "execution_count": 83,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "1226040911\n",
-            "1643422347\n"
+            "116536438\n",
+            "119267742\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "@time_of_function\n",
+        "def select1(login: str):\n",
+        "    with sqlite3.connect('chat1.db') as connection:\n",
+        "        cursor = connection.cursor()\n",
+        "        query = \"\"\"\n",
+        "                    SELECT chatname FROM chat_users WHERE login = ?\n",
+        "                \"\"\"\n",
+        "        cursor.execute(query, (login,))\n",
+        "\n",
+        "select1(\"shsfeawd\")\n",
+        "\n",
+        "@time_of_function\n",
+        "def select2(login: str):\n",
+        "    with sqlite3.connect('chat2.db') as connection:\n",
+        "        cursor = connection.cursor()\n",
+        "        query = \"\"\"\n",
+        "                    SELECT c.chatname\n",
+        "                    FROM chat_users cu\n",
+        "                    JOIN users u ON cu.user_id = u.id\n",
+        "                    JOIN chats c ON cu.chat_id = c.id\n",
+        "                    WHERE u.login = ?;\n",
+        "                \"\"\"\n",
+        "        cursor.execute(query, (login,))\n",
+        "\n",
+        "select2(\"shsfeawd\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "mXlvlCrZXo3r",
+        "outputId": "64a8cb0b-c103-45b7-83ac-f1f53ea8d5e7"
+      },
+      "execution_count": 84,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3420863\n",
+            "1333114\n"
           ]
         }
       ]
