Создано с помощью Colaboratory

--- a/sql.ipynb
+++ b/sql.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM+3+Ef4Z/h2Gi3AkHn/7xs",
+      "authorship_tag": "ABX9TyOPPanBsVgPfro62PyZZmoR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": 57,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "uM-kXQPLw2gK",
-        "outputId": "eddcdef6-53b9-402b-a700-c1c6cb73510d"
+        "outputId": "a6e1867a-60d9-4e81-8b90-62c872d15b70"
       },
       "outputs": [
         {
@@ -129,7 +129,7 @@
       "metadata": {
         "id": "PJMCpl5kxOjP"
       },
-      "execution_count": 44,
+      "execution_count": 53,
       "outputs": []
     },
     {
@@ -159,7 +159,7 @@
       "metadata": {
         "id": "kaAmJ2Wpx_1H"
       },
-      "execution_count": 45,
+      "execution_count": 54,
       "outputs": []
     },
     {
@@ -185,14 +185,14 @@
       "metadata": {
         "id": "-BFBrNTh1jXp"
       },
-      "execution_count": 46,
+      "execution_count": 55,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "def move_user():\n",
-        "    with sqlite3.connect('users.db') as connection:\n",
+        "    with sqlite3.connect('users.db') as connection:  # transaction\n",
         "        cursor = connection.cursor()\n",
         "        query = \"\"\"\n",
         "                    INSERT INTO users(id, firstname, lastname, email)\n",
@@ -213,7 +213,7 @@
       "metadata": {
         "id": "v2NUDPAR1u1r"
       },
-      "execution_count": 48,
+      "execution_count": 56,
       "outputs": []
     }
   ]
