Создано с помощью Colaboratory

--- a/ast.ipynb
+++ b/ast.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM6fFt82ZClLNE3qnRixF23",
+      "authorship_tag": "ABX9TyOA8LwFsZBdTEDU9rhqLkoy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,20 +28,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 55,
+      "execution_count": 61,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "XWL7bk-4kbwp",
-        "outputId": "7a7a2e6c-cbdb-403b-b765-acaf055e06ea"
+        "outputId": "ef083184-350e-4b0e-d59a-33583a2fd0cb"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "hello 1\n"
+            "hello 1\n",
+            "hi\n"
           ]
         }
       ],
@@ -53,7 +54,10 @@
         "print(f'hello {a}')\n",
         "\"\"\")\n",
         "\n",
-        "exec(compile(tree, filename='', mode='exec'))"
+        "exec(compile(tree, filename='', mode='exec'))\n",
+        "\n",
+        "program = 'print(\"hi\")'\n",
+        "exec(program)"
       ]
     }
   ]
