Создано с помощью Colaboratory

--- a/xor_keras.ipynb
+++ b/xor_keras.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNZSqI54S8EaEAh3nG7DkPD",
+      "authorship_tag": "ABX9TyPLz2jEh/Ho7IgDidz4iFur",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +34,7 @@
         "from keras.layers import Flatten, Dense\n",
         "\n",
         "x_train = [[0, 0], [0, 1], [1, 0], [1, 1]]\n",
-        "y_train = [0, 1, 1, 0]\n",
+        "y_train = [[0], [1], [1], [0]]\n",
         "\n",
         "# Создаём модель\n",
         "model = Sequential()\n",
@@ -55,7 +55,7 @@
       "metadata": {
         "id": "hPOSwJ4wMj3B"
       },
-      "execution_count": 171,
+      "execution_count": 178,
       "outputs": []
     },
     {
@@ -63,7 +63,7 @@
       "source": [
         "# Создаём тестовую выборку\n",
         "x_test = [[0, 0], [0, 1], [1, 0], [1, 1]]\n",
-        "y_test = [0, 1, 1, 0]\n",
+        "y_test = [[0], [1], [1], [0]]\n",
         "\n",
         "\n",
         "model = load_model('xor_model.keras')\n",
@@ -80,19 +80,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bjEt7vQLaAbL",
-        "outputId": "0565d5ca-5ecc-443d-ebd2-dbe26acbc678"
+        "outputId": "7351b722-75d2-448f-b0c4-5656d71b0f0a"
       },
-      "execution_count": 177,
+      "execution_count": 179,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Предсказание y:\n",
-            "[[0.03292878]\n",
-            " [0.9918115 ]\n",
-            " [0.9929407 ]\n",
-            " [0.00460344]]\n",
+            "[[0.03452541]\n",
+            " [0.98133755]\n",
+            " [0.98484844]\n",
+            " [0.01263515]]\n",
             "Точность: 100.0 %\n"
           ]
         }
